// Copyright 2025 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.environment;
option go_package = "github.com/bucketeer-io/bucketeer/v2/proto/environment";

message Organization {
  string id = 1;
  string name = 2;
  string url_code = 3;
  string description = 4;  // optional
  bool disabled = 5;
  bool archived = 6;
  bool trial = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
  bool system_admin = 10;
  int32 project_count = 11;
  int32 environment_count = 12;
  int32 user_count = 13;
  string owner_email = 14;
}
